test/corpus/expressions.txt
==================
Integer literals
==================

const bit<8> A = 5;
const bit<8> B = 8w5;
const bit<16> C = 16w0x0800;
const bit<1> D = 1w1;
const bit<8> E = 8w0b1010;

---

(source_file
  (constant_declaration
    type: (type_ref
      (base_type
        (integer_literal)))
    name: (name
      (nonTypeName
        (identifier)))
    value: (integer_literal))
  (constant_declaration
    type: (type_ref
      (base_type
        (integer_literal)))
    name: (name
      (nonTypeName
        (identifier)))
    value: (integer_literal))
  (constant_declaration
    type: (type_ref
      (base_type
        (integer_literal)))
    name: (name
      (nonTypeName
        (identifier)))
    value: (integer_literal))
  (constant_declaration
    type: (type_ref
      (base_type
        (integer_literal)))
    name: (name
      (nonTypeName
        (identifier)))
    value: (integer_literal))
  (constant_declaration
    type: (type_ref
      (base_type
        (integer_literal)))
    name: (name
      (nonTypeName
        (identifier)))
    value: (integer_literal)))
==================
Boolean literals
==================

const bool X = true;
const bool Y = false;

---

(source_file
  (constant_declaration
    type: (type_ref
      (base_type))
    name: (name
      (nonTypeName
        (identifier))))
  (constant_declaration
    type: (type_ref
      (base_type))
    name: (name
      (nonTypeName
        (identifier)))))
==================
String literal
==================

const string S = "hello";

---

(source_file
  (constant_declaration
    type: (type_ref
      (base_type))
    name: (name
      (nonTypeName
        (identifier)))
    value: (string_literal)))
==================
Arithmetic expressions
==================

const bit<8> A = 1 + 2;
const bit<8> B = 3 * 4;
const bit<8> C = 10 - 5;
const bit<8> D = 8 / 2;
const bit<8> E = 7 % 3;

---

(source_file
  (constant_declaration
    type: (type_ref
      (base_type
        (integer_literal)))
    name: (name
      (nonTypeName
        (identifier)))
    value: (integer_literal)
    value: (integer_literal))
  (constant_declaration
    type: (type_ref
      (base_type
        (integer_literal)))
    name: (name
      (nonTypeName
        (identifier)))
    value: (integer_literal)
    value: (integer_literal))
  (constant_declaration
    type: (type_ref
      (base_type
        (integer_literal)))
    name: (name
      (nonTypeName
        (identifier)))
    value: (integer_literal)
    value: (integer_literal))
  (constant_declaration
    type: (type_ref
      (base_type
        (integer_literal)))
    name: (name
      (nonTypeName
        (identifier)))
    value: (integer_literal)
    value: (integer_literal))
  (constant_declaration
    type: (type_ref
      (base_type
        (integer_literal)))
    name: (name
      (nonTypeName
        (identifier)))
    value: (integer_literal)
    value: (integer_literal)))
==================
Bitwise expressions
==================

const bit<8> A = 0xFF & 0x0F;
const bit<8> B = 0xF0 | 0x0F;
const bit<8> C = 0xFF ^ 0x0F;
const bit<8> D = ~0xFF;
const bit<8> E = 1 << 4;
const bit<8> F = 0x80 >> 1;

---

(source_file
  (constant_declaration
    type: (type_ref
      (base_type
        (integer_literal)))
    name: (name
      (nonTypeName
        (identifier)))
    value: (integer_literal)
    value: (integer_literal))
  (constant_declaration
    type: (type_ref
      (base_type
        (integer_literal)))
    name: (name
      (nonTypeName
        (identifier)))
    value: (integer_literal)
    value: (integer_literal))
  (constant_declaration
    type: (type_ref
      (base_type
        (integer_literal)))
    name: (name
      (nonTypeName
        (identifier)))
    value: (integer_literal)
    value: (integer_literal))
  (constant_declaration
    type: (type_ref
      (base_type
        (integer_literal)))
    name: (name
      (nonTypeName
        (identifier)))
    value: (integer_literal))
  (constant_declaration
    type: (type_ref
      (base_type
        (integer_literal)))
    name: (name
      (nonTypeName
        (identifier)))
    value: (integer_literal)
    value: (integer_literal))
  (constant_declaration
    type: (type_ref
      (base_type
        (integer_literal)))
    name: (name
      (nonTypeName
        (identifier)))
    value: (integer_literal)
    value: (integer_literal)))
==================
Comparison expressions
==================

const bool A = 1 == 2;
const bool B = 1 != 2;
const bool C = 1 < 2;
const bool D = 1 > 2;
const bool E = 1 <= 2;
const bool F = 1 >= 2;

---

(source_file
  (constant_declaration
    type: (type_ref
      (base_type))
    name: (name
      (nonTypeName
        (identifier)))
    value: (integer_literal)
    value: (integer_literal))
  (constant_declaration
    type: (type_ref
      (base_type))
    name: (name
      (nonTypeName
        (identifier)))
    value: (integer_literal)
    value: (integer_literal))
  (constant_declaration
    type: (type_ref
      (base_type))
    name: (name
      (nonTypeName
        (identifier)))
    value: (integer_literal)
    value: (integer_literal))
  (constant_declaration
    type: (type_ref
      (base_type))
    name: (name
      (nonTypeName
        (identifier)))
    value: (integer_literal)
    value: (integer_literal))
  (constant_declaration
    type: (type_ref
      (base_type))
    name: (name
      (nonTypeName
        (identifier)))
    value: (integer_literal)
    value: (integer_literal))
  (constant_declaration
    type: (type_ref
      (base_type))
    name: (name
      (nonTypeName
        (identifier)))
    value: (integer_literal)
    value: (integer_literal)))
==================
Logical expressions
==================

const bool A = true && false;
const bool B = true || false;
const bool C = !true;

---

(source_file
  (constant_declaration
    type: (type_ref
      (base_type))
    name: (name
      (nonTypeName
        (identifier))))
  (constant_declaration
    type: (type_ref
      (base_type))
    name: (name
      (nonTypeName
        (identifier))))
  (constant_declaration
    type: (type_ref
      (base_type))
    name: (name
      (nonTypeName
        (identifier)))))
==================
Ternary expression
==================

const bit<8> X = true ? 1 : 2;

---

(source_file
  (constant_declaration
    type: (type_ref
      (base_type
        (integer_literal)))
    name: (name
      (nonTypeName
        (identifier)))
    value: (integer_literal)
    value: (integer_literal)))
==================
Member access
==================

const bit<48> X = hdr.ethernet.dst_addr;

---

(source_file
  (constant_declaration
    type: (type_ref
      (base_type
        (integer_literal)))
    name: (name
      (nonTypeName
        (identifier)))
    value: (type_name
      (identifier))
    member: (member
      name: (name
        (nonTypeName
          (identifier))))
    member: (member
      name: (name
        (nonTypeName
          (identifier))))))
==================
Function call
==================

action do_something() {
    count(1);
}

---

(source_file
  (action_declaration
    name: (name
      (nonTypeName
        (identifier)))
    body: (block_statement
      statements: (assignment_or_method_call_statement
        (lvalue
          (prefixedNonTypeName
            (nonTypeName
              (identifier))))
        (argument_list
          (non_empty_arg_list
            (argument
              value: (integer_literal))))))))
==================
Cast expression
==================

const bit<16> X = (bit<16>) hdr.ethernet.ether_type;

---

(source_file
  (constant_declaration
    type: (type_ref
      (base_type
        (integer_literal)))
    name: (name
      (nonTypeName
        (identifier)))
    type: (type_ref
      (base_type
        (integer_literal)))
    expression: (type_name
      (identifier))
    member: (member
      name: (name
        (nonTypeName
          (identifier))))
    member: (member
      name: (name
        (nonTypeName
          (identifier))))))
==================
Struct literal
==================

const ethernet_h ETH = { dst_addr = 0, src_addr = 0, ether_type = 0x0800 };

---

(source_file
  (constant_declaration
    type: (type_ref
      (type_name
        (identifier)))
    name: (name
      (nonTypeName
        (identifier)))
    value: (kv_list
      (kv_pair
        key: (name
          (nonTypeName
            (identifier)))
        value: (integer_literal))
      (kv_pair
        key: (name
          (nonTypeName
            (identifier)))
        value: (integer_literal))
      (kv_pair
        key: (name
          (nonTypeName
            (identifier)))
        value: (integer_literal)))))
